#-------------------------------------#
# FORMATTER AND LINTER
#-------------------------------------#

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.flake8]
extend-ignore = ["E701", "E265"]
indent-size = 4
max-line-length = 100
literal-inline-quotes = "single"
literal-multiline-quotes = "single"
literal-docstring-quotes = "single"

#-------------------------------------#
# TYPE CHECKER
#-------------------------------------#

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnnecessaryIsInstance = false

#-------------------------------------#
# CODE TESTER
#-------------------------------------#

[tool.pytest.ini_options]
addopts = "--pspec"

#-------------------------------------#
# PACKAGE PUBLICATION
#-------------------------------------#

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mezages"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["messages", "errors", "failures", "warnings"]
description = "A package for the management of operational messages"
authors = [{name = "Abdulfatai Aka", email = "abdulfataiaka@gmail.com"}]
maintainers = [{name = "Abdulfatai Aka", email = "abdulfataiaka@gmail.com"}]
classifiers = [
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage  = "https://github.com/aidubtech/mezages"
Issues    = "https://github.com/aidubtech/mezages/issues"
Changelog = "https://github.com/aidubtech/mezages/blob/main/CHANGELOG.md"
