# -------------------------------------
# BLACK: FORMATTER
# -------------------------------------

[tool.black]
line-length = 90
skip-string-normalization = true

# -------------------------------------
# FLAKE8: LINTER
# -------------------------------------

[tool.flake8]
extend-ignore = ["E701", "E265"]
indent-size = 4
max-line-length = 90
literal-inline-quotes = "single"
literal-multiline-quotes = "single"
literal-docstring-quotes = "single"

# -------------------------------------
# PYRIGHT: TYPE CHECKER
# -------------------------------------

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnnecessaryIsInstance = false

# -------------------------------------
# PYTEST: TEST RUNNER
# -------------------------------------

[tool.pytest.ini_options]
addopts = "--pspec"

# -------------------------------------
# TOX: CROSS PYTHON VERSION TESTER
# -------------------------------------

[tool.tox]
min_version = "4.13.0"

[testenv]

basepython =
    python3.11.0
    python3.11.1
    python3.11.2
    python3.11.3
    python3.11.4
    python3.11.5
    python3.11.6
    python3.11.7
    python3.11.8
    python3.12.0
    python3.12.1
    python3.12.2

[testenv.additional]

basepython = python3.11.0

setenv =
    ENVIRONMENT_VARIABLE=value

deps =
    pytest
    pytest-cov
    my_custom_dependency>=1.0

commands =
    pytest --cov=mezages tests/
    flake8 mezages

# -------------------------------------
# PACKAGE: DETAILS & PUBLICATION
# -------------------------------------

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mezages"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["messages", "errors", "failures", "warnings"]
description = "A package for the management of operational messages"
authors = [{name = "Abdulfatai Aka", email = "abdulfataiaka@gmail.com"}]
maintainers = [{name = "Abdulfatai Aka", email = "abdulfataiaka@gmail.com"}]
classifiers = [
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage  = "https://github.com/aidubtech/mezages"
Issues    = "https://github.com/aidubtech/mezages/issues"
Changelog = "https://github.com/aidubtech/mezages/blob/main/CHANGELOG.md"
