# -------------------------------------
# BLACK: FORMATTER
# -------------------------------------

[tool.black]
line-length = 85
skip-string-normalization = true

# -------------------------------------
# FLAKE8: LINTER
# -------------------------------------

[tool.flake8]
extend-ignore = ["E701", "E265"]
indent-size = 4
max-line-length = 85
literal-inline-quotes = "single"
literal-multiline-quotes = "single"
literal-docstring-quotes = "single"

# -------------------------------------
# PYRIGHT: TYPE CHECKER
# -------------------------------------

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnnecessaryIsInstance = false

# -------------------------------------
# PYTEST: TEST RUNNER
# -------------------------------------

[tool.pytest.ini_options]
addopts = "--pspec"

# -------------------------------------
# PACKAGE: DETAILS & PUBLICATION
# -------------------------------------

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mezages"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["message", "error", "failure", "warning"]
description = "A library for the collection and organization of operational messages"
authors = [
    {name = "Abdulfatai Aka", email = "abdulfataiaka@gmail.com"},
]
maintainers = [
    {name = "Ibrahim Bello", email = "belloibrahv@gmail.com"},
    {name = "Abdulfatai Aka", email = "abdulfataiaka@gmail.com"},
    {name = "Yusuf Ariyibi", email = "info.yusufariyibi@gmail.com"},
]
classifiers = [
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage  = "https://github.com/aidubtech/mezages"
Issues    = "https://github.com/aidubtech/mezages/issues"
Changelog = "https://github.com/aidubtech/mezages/blob/main/CHANGELOG.md"
